...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRegistro"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/nombreRegistro"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="Nombre y Apellidos"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nombreRegistro"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistro" />

    <EditText
        android:id="@+id/usernameRegistro"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="Introduce un nombre de usuario"
        app:layout_constraintBottom_toTopOf="@+id/passRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistro"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
...
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/usernameRegistro"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegistro" />

    <EditText
        android:id="@+id/emailRegistro"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="example@email.com"
        app:layout_constraintBottom_toTopOf="@+id/passRegistro"
...
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/passRegistro"
        app:layout_constraintTop_toBottomOf="@+id/passRegistro" />

    <Button
        android:id="@+id/confirmarRegistro"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:text="Crear cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
...
