<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="grados_entries">
        <item name="celsius">Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="velocidad_entries">
        <item>Km/h</item>
        <item>MPH</item>
    </string-array>
    <!-- Reply Preference -->
    <string-array name="reply_entries">
        <item>Reply</item>
        <item>Reply to all</item>
    </string-array>

    <string-array name="reply_values">
        <item>reply</item>
        <item>reply_all</item>
    </string-array>
</resources>