<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar_nav_graph"
    app:startDestination="@id/favoritosFragment">


    <fragment
        android:id="@+id/favoritosFragment"
        android:name="es.unex.gps.weathevent.view.favorites.FavoritosFragment"
        android:label="@string/favourite_option"
        tools:layout="@layout/fragment_favoritos" />
    <fragment
        android:id="@+id/buscarFragment"
        android:name="es.unex.gps.weathevent.view.buscar.BuscarFragment"
        android:label="@string/search_option"
        tools:layout="@layout/fragment_buscar" />
    <fragment
        android:id="@+id/listEventFragment"
        android:name="es.unex.gps.weathevent.view.events.ListEventFragment"
        android:label="@string/fragment_list_event"
        tools:layout="@layout/fragment_list_event" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="es.unex.gps.weathevent.view.SettingsFragment"
        android:label="Ajustes" />

    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment" />


</navigation>